welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: not found: type int
def peindre(motif:Array[Color],m:int){
                                 ^